Use JRE instead of JDK alpine, add java parameters for docker